--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
         
-        <section id="homepage-feature">
+        <section class="main-banner">
             <h1>Feature Ad</h1>
         </section>
         
