Added product category grid
Flexbox fluid grid layout

--- a/index.html
+++ b/index.html
@@ -56,6 +56,33 @@
     <section id="product-categories">
         <h2> Product Categories</h2>
 
+        <div id="product-categories-container">
+            
+            <div class="product-categories-featured">
+                <h3>Play - Gaming PC</h3>
+                <p>#1 Best in Canada Custom Gaming Computers! Don't believe us? How about our 30 Day Money Back Gaurantee?</p>
+                <img src="img/placeholder.png">
+
+            </div>
+
+            <div class="product-categories-secondary">
+                <div id="category-two">
+                    <h3>Work - Home &amp; Office</h3>
+                    <p>#1 Best in Canada Custom Gaming Computers! Don't believe us? How about our 30 Day Money Back Gaurantee?</p>
+                    <img src="img/placeholder.png">
+                </div>
+
+                <div id="category-three">
+                    <h3>Custom - Dream PC</h3>
+                    <p>#1 Best in Canada Custom Gaming Computers! Don't believe us? How about our 30 Day Money Back Gaurantee?</p>
+                    <img src="img/placeholder.png">
+                </div>
+
+            </div>
+
+        </div>
+
+
     </section>
 </body>
 
