Updated and styled product page
Added stylized nav links, banner headings, accordion feature, product feature, selling points

--- a/product_page.html
+++ b/product_page.html
@@ -14,7 +14,7 @@
         <nav id="main-nav">
             <ul>
                 <li>
-                    <a href="index.html" class="button-nav">play</a>
+                    <a href="#" class="button-nav">play</a>
                 </li>
                 <li>
                     <a href="sitemap.html" class="button-nav">work</a>
@@ -23,62 +23,161 @@
                     <a href="user_flows.html" class="button-nav">custom</a>
                 </li>
                 <li>
-                    <a href="#" class="button-nav">carbon.co</a>
+                    <a href="index.html" class="button-nav">carbon.co</a>
                 </li>
                 <li>
-                    <a href="citations.html" class="button-nav">search</a>
+                    <a href="#" class="button-nav">search</a>
                 </li>
                 <li>
-                    <a href="citations.html" class="button-nav">cart</a>
+                    <a href="#" class="button-nav">cart</a>
                 </li>
                 <li>
-                    <a href="citations.html" class="button-nav">about</a>
+                    <a href="#" class="button-nav">about</a>
                 </li>
                 <li>
-                    <a href="citations.html" class="button-nav">chat</a>
+                    <a href="#" class="button-nav">chat</a>
                 </li>
             </ul>
         </nav>
 
-        <section class="main-banner">
-            <h1>Product</h1>
-            <h2>Starting at $999</h2>
-        </section>
+        <div class="product-page">
+            <section class="main-banner">
+                <h1>Product</h1>
+                <h2>Starting at $999</h2>
+            </section>
 
-        <section class="product-overview">
-            <h1>Product</h1>
-            <p>Blurbs about product one</p>
+            <section class="product-overview">
+                <h1>Product</h1>
+                <p>Blurbs about product one</p>
 
-            <div class="grid-wrapper">
-                <div class="col-1-of-2">
-                    <img src="img/placeholder.png" alt="picture of computer">
+                <div class="grid-wrapper">
+                    <div class="col-1-of-2">
+                        <img class="product-view" src="img/placeholder.png" alt="computer view 1">
+                        <div class="smaller-product-views">
+                            <img src="img/placeholder.png" alt="smaller product view 1">
+                            <img src="img/placeholder.png" alt="smaller product view 2">
+                            <img src="img/placeholder.png" alt="smaller product view 3">
+                            <img src="img/placeholder.png" alt="smaller product view 4">
+                        </div>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="ideal-for">
+                            <h3>Ideal For:</h3>
+                            <img class="game-logo" src="img/placeholder.png" alt="game logo 1">
+                            <img class="game-logo" src="img/placeholder.png" alt="game logo 2">
+                            <img class="game-logo" src="img/placeholder.png" alt="game logo 3">
+                        </div>
+
+                        <button class="product-info-accordion">Specifications</button>
+                        <div class="product-info-panel">
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                        </div>
+
+                        <button class="product-info-accordion">Performance</button>
+                        <div class="product-info-panel">
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                            <p>
+                                <span>Attribute #</span> <span>value</span>
+                            </p>
+                        </div>
+
+                        <button class="product-info-accordion">Warranty</button>
+                        <div class="product-info-panel">
+                            <p>Lorem ipsum...</p>
+                        </div>
+
+                        <div class="subtotal">
+                            <p>Sub-Total: $999</p>
+                        </div>
+
+                        <div class="product-page-buttons">
+                            <a class="cta-button" href="#">Questions?</a>
+                            <a class="cta-button" href="#">Add to Cart</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-1-of-2">
-                    <button class="product-info-accordion">Specifications</button>
-                    <div class="product-info-panel">
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
+            </section>
+
+            <section class="product-features">
+                <h2>Key features</h2>
+
+                <div class="grid-wrapper key-point">
+                    <div class="col-1-of-2">
+                        <div class="key-point-content">
+                            <h3>Key Selling Point #1</h3>
+                            <ul>
+                                <li>Information about point #1</li>
+                                <li>Information about point #1</li>
+                                <li>Information about point #1</li>
+                            </ul>
+                        </div>
                     </div>
 
-                    <button class="product-info-accordion">Performance</button>
-                    <div class="product-info-panel">
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                        <p>Attribute # value</p>
-                    </div>
-
-                    <button class="product-info-accordion">Warranty</button>
-                    <div class="product-info-panel">
-                        <p>Lorem ipsum...</p>
+                    <div class="col-1-of-2">
+                        <img class="key-point-img" src="img/placeholder.png" alt="Photo of key point #1">
                     </div>
                 </div>
-            </div>
-        </section>
+
+                <div class="grid-wrapper key-point">
+                    <div class="col-1-of-2">
+                        <div class="key-point-content">
+                            <h3>Key Selling Point #2</h3>
+                            <ul>
+                                <li>Information about point #2</li>
+                                <li>Information about point #2</li>
+                                <li>Information about point #2</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <img class="key-point-img" src="img/placeholder.png" alt="Photo of key point #2">
+                    </div>
+                </div>
+
+                <div class="grid-wrapper key-point">
+                    <div class="col-1-of-2">
+                        <div class="key-point-content">
+                            <h3>Key Selling Point #3</h3>
+                            <ul>
+                                <li>Information about point #3</li>
+                                <li>Information about point #3</li>
+                                <li>Information about point #3</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <img class="key-point-img" src="img/placeholder.png" alt="Photo of key point #3">
+                    </div>
+                </div>
+            </section>
+        </div>
 
         <!-- JavaScript for Product Information Accordian -->
         <script>
