Updated nav in index.html
Linked play, work, custom to product_page.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <nav id="main-nav">
         <ul>
             <li>
-                <a href="index.html" class="button-nav">play</a>
+                <a href="product_page.html" class="button-nav">play</a>
             </li>
             <li>
-                <a href="sitemap.html" class="button-nav">work</a>
+                <a href="product_page.html" class="button-nav">work</a>
             </li>
             <li>
-                <a href="user_flows.html" class="button-nav">custom</a>
+                <a href="product_page.html" class="button-nav">custom</a>
             </li>
             <li>
                 <a href="#" class="button-nav">carbon.co</a>
