Nav update with icons
Icons for search and cart added

--- a/product_page.html
+++ b/product_page.html
@@ -26,10 +26,14 @@
                     <a href="index.html" class="button-nav">carbon.co</a>
                 </li>
                 <li>
-                    <a href="#" class="button-nav">search</a>
+                    <a href="#" class="button-nav">
+                        <img src="img/search.png" alt="search icon">
+                    </a>
                 </li>
                 <li>
-                    <a href="#" class="button-nav">cart</a>
+                    <a href="#" class="button-nav">
+                        <img src="img/shopping-cart-black-shape.png" alt="shopping cart icon">
+                    </a>
                 </li>
                 <li>
                     <a href="#" class="button-nav">about</a>
