--- a/index.html
+++ b/index.html
@@ -44,23 +44,26 @@
             </ul>
         </nav>
 
-        <section class="main-banner">
-            <!--            <h1>Feature Ad</h1>-->
-            <img class="home-hero-image" src="img/homepage_hero.png" alt="render of three gaming computers in hallway">
-            <h2 class="hero-top-text"> The All New</h2>
-            <h2 class="hero-bottom-text"> Carbon Computer Lineup</h2>
-        </section>
+        <div class="homepage">
+
+            <section class="main-banner">
+                <img class="home-hero-image" src="img/homepage_hero.png" alt="render of three gaming computers in hallway">
+                <h2 class="hero-top-text">The All New<br>Carbon Computer Lineup</h2>
+<!--                <h2 class="hero-bottom-text"> Carbon Computer Lineup</h2>-->
+            </section>
 
 
-        <section id="gaming-products">
-            <h1>Carbon Computers</h1>
-            <p>#1 Best in Canada Custom Gaming Computers! Don't believe us? How about our 30 Day Money Back Gaurantee?</p>
-        </section>
+            <section id="gaming-products">
+                <h1>Carbon Computers</h1>
+                <p>#1 Best in Canada Custom Gaming Computers! Don't believe us? How about our 30 Day Money Back Gaurantee?</p>
+            </section>
 
-        <section id="product-categories">
-            <h2> Product Categories</h2>
+            <section id="product-categories">
+                <h2> Product Categories</h2>
 
-        </section>
+            </section>
+            
+        </div>
     </body>
 
 </html>
