Updated hero text
mobile hero text now visible in smaller dimensions

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
             <section class="main-banner">
                 <img class="home-hero-image" src="img/homepage_hero.png" alt="render of three gaming computers in hallway">
-                <h2 class="hero-top-text">The All New<br>Carbon Computer Lineup</h2>
-<!--                <h2 class="hero-bottom-text"> Carbon Computer Lineup</h2>-->
+                <h2 class="hero-top-text">The All New</h2>
+                <h2 class="hero-bottom-text">Carbon Computer Lineup</h2>
+                <h2 class="mobile-hero-text">The All New<br>Carbon Computer Lineup</h2>
             </section>
 
 
