Linked chat nav button
linked to chat.html

--- a/product_page.html
+++ b/product_page.html
@@ -39,7 +39,7 @@
                     <a href="#" class="button-nav">about</a>
                 </li>
                 <li>
-                    <a href="#" class="button-nav">chat</a>
+                    <a href="chat.html" class="button-nav">chat</a>
                 </li>
             </ul>
         </nav>
