Added alt tags to images
Alt tags were missing and are now added

--- a/chat.html
+++ b/chat.html
@@ -1,85 +1,85 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>chat - carbon.co</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/grids.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-</head>
+    <head>
+        <title>chat - carbon.co</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/grids.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
+    </head>
 
-<body>
-    <nav id="main-nav">
-        <ul>
-            <li>
-                <a href="product_page.html" class="button-nav">play</a>
-            </li>
-            <li>
-                <a href="product_page.html" class="button-nav">work</a>
-            </li>
-            <li>
-                <a href="product_page.html" class="button-nav">custom</a>
-            </li>
-            <li>
-                <a href="index.html" class="button-nav">carbon.co</a>
-            </li>
-            <li>
-                <a href="#" class="button-nav">
+    <body>
+        <nav id="main-nav">
+            <ul>
+                <li>
+                    <a href="product_page.html" class="button-nav">play</a>
+                </li>
+                <li>
+                    <a href="product_page.html" class="button-nav">work</a>
+                </li>
+                <li>
+                    <a href="product_page.html" class="button-nav">custom</a>
+                </li>
+                <li>
+                    <a href="index.html" class="button-nav">carbon.co</a>
+                </li>
+                <li>
+                    <a href="#" class="button-nav">
                         <img src="img/search.png" alt="search icon">
                     </a>
-            </li>
-            <li>
-                <a href="#" class="button-nav">
+                </li>
+                <li>
+                    <a href="#" class="button-nav">
                         <img src="img/shopping-cart-black-shape.png" alt="shopping cart icon">
                     </a>
-            </li>
-            <li>
-                <a href="about.html" class="button-nav">about</a>
-            </li>
-            <li>
-                <a href="chat.html" class="button-nav">chat</a>
-            </li>
-        </ul>
-    </nav>
+                </li>
+                <li>
+                    <a href="about.html" class="button-nav">about</a>
+                </li>
+                <li>
+                    <a href="chat.html" class="button-nav">chat</a>
+                </li>
+            </ul>
+        </nav>
 
-    <div class="chat-page">
+        <div class="chat-page">
 
-        <section id="chat-copy">
-            <h1>Talk With Us</h1>
-            <p>Interested in our products but have questions? Is there trouble with your order? Connect with us through one of the options below, and we'll work hard to quickly resolve your problem.</p>
-        </section>
+            <section id="chat-copy">
+                <h1>Talk With Us</h1>
+                <p>Interested in our products but have questions? Is there trouble with your order? Connect with us through one of the options below, and we'll work hard to quickly resolve your problem.</p>
+            </section>
 
-        <section id="chat-categories">
-            <h2> Options:</h2>
+            <section id="chat-categories">
+                <h2> Options:</h2>
 
-            <div id="chat-container">
+                <div id="chat-container">
 
-                <div id="live-chat">
-                    <h3> Live Chat </h3>
-                    <img src="img/placeholder.png">
+                    <div id="live-chat">
+                        <h3> Live Chat </h3>
+                        <img src="img/placeholder.png" alt="chat icon">
+
+                    </div>
+
+                    <div id="email">
+                        <h3> Email </h3>
+                        <img src="img/placeholder.png" alt="email icon">
+
+                    </div>
+
+                    <div id="schedule-call">
+                        <h3> Schedule Call </h3>
+                        <img src="img/placeholder.png" alt="call icon">
+
+                    </div>
+
 
                 </div>
 
-                <div id="email">
-                    <h3> Email </h3>
-                    <img src="img/placeholder.png">
+            </section>
 
-                </div>
-
-                <div id="schedule-call">
-                    <h3> Schedule Call </h3>
-                    <img src="img/placeholder.png">
-
-                </div>
-
-
-            </div>
-
-        </section>
-
-    </div>
-</body>
+        </div>
+    </body>
 
 </html>
