Removed link for about nav button
link did not go anywhere and needed correction

--- a/chat.html
+++ b/chat.html
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="button-nav">about</a>
+                    <a href="#" class="button-nav">about</a>
                 </li>
                 <li>
                     <a href="chat.html" class="button-nav">chat</a>
