--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                 <!-- https://www.flaticon.com/free-icon/shopping-cart-black-shape_25619#term=cart&page=1&position=32 -->
                 <li>
-                    <a href="about.html" class="button-nav">about</a>
+                    <a href="#" class="button-nav">about</a>
                 </li>
                 <li>
                     <a href="chat.html" class="button-nav">chat</a>
